--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,3 @@
-# .github/workflows/build-wine-full.yml
 name: Build Wine 11.1 Staging‑TkG ARM64EC + VulkanTURNIP + DXVK + VKD3D
 
 on:
@@ -34,7 +33,7 @@ jobs:
         set -euxo pipefail
         sudo apt update
         sudo apt install -y --no-install-recommends \
-          autoconf automake bash bison build-essential cmake curl \
+          autoconf automake bash bison build-essential cmake \
           git gettext libasound2-dev libdbus-1-dev libfontconfig-dev \
           libfreetype-dev libgl-dev libgnutls28-dev libpciaccess-dev \
           libpulse-dev libudev-dev libusb-1.0-0-dev libv4l-dev \
@@ -44,7 +43,7 @@ jobs:
           llvm lld unzip zip wget xz-utils libvulkan-dev
 
     ############################################################
-    # 3) LLVM‑mingw
+    # 3) LLVM‑mingw (for cross‑tools)
     ############################################################
     - name: Setup llvm-mingw
       run: |
@@ -58,7 +57,7 @@ jobs:
         echo "$PWD/llvm-mingw/bin" >> "$GITHUB_PATH"
 
     ############################################################
-    # 4) Wine sources
+    # 4) Wine + staging sources
     ############################################################
     - name: Clone Wine sources
       run: |
@@ -67,19 +66,15 @@ jobs:
         git clone --depth 1 --branch v11.1 https://github.com/wine-staging/wine-staging.git wine-staging
 
     ############################################################
-    # 5) Apply staging patches
+    # 5) Apply staging patches (minimal conflicts)
     ############################################################
     - name: Apply staging patches
       run: |
         set -euxo pipefail
         cd wine
-        EXCLUDE_ARGS=""
-        for p in ../wine-staging/staging/patches/*.patch; do
-          case "$(basename "$p")" in
-            *ntsync* ) EXCLUDE_ARGS="$EXCLUDE_ARGS -W $(basename "$p")";;
-          esac
-        done
-        python3 ../wine-staging/staging/patchinstall.py --all $EXCLUDE_ARGS --destdir="$(pwd)"
+        # exclude problematic groups (ntsync) known to conflict
+        python3 ../wine-staging/staging/patchinstall.py --all \
+          --exclude-groups="ntsync" --destdir="$(pwd)"
 
     ############################################################
     # 6) Apply wine‑tkg patches
@@ -101,30 +96,30 @@ jobs:
         done
 
     ############################################################
-    # 7) Prepare & build Wine
+    # 7) Build minimal wine-tools (host tools needed for cross)
     ############################################################
-    - name: Prepare build
+    - name: Build minimal wine-tools
       run: |
         set -euxo pipefail
         cd wine
-        dlls/winevulkan/make_vulkan
-        tools/make_requests
-        tools/make_specfiles
-        autoreconf -f
-
-    - name: Build wine-tools
-      run: |
-        set -euxo pipefail
-        mkdir wine-tools-build
+        mkdir -p wine-tools-build
         cd wine-tools-build
-        ../wine/configure --enable-tools --disable-tests --disable-win16 --enable-archs=aarch64,i386
-        make -j"$(nproc)" || true
+        ../configure \
+          --enable-tools \
+          --disable-tests \
+          --disable-win16 \
+          --enable-archs=i386,aarch64
+        make -j"$(nproc)"
+        # Only copy the necessary tools (avoid building full wine)
         mkdir -p ../wine-tools
-        cp tools/winebuild/winebuild ../wine-tools/ || true
-        cp tools/widl/widl ../wine-tools/ || true
-        cp tools/wrc/wrc ../wine-tools/ || true
-        cp tools/wmc/wmc ../wine-tools/ || true
+        cp tools/winebuild/winebuild ../wine-tools/
+        cp tools/widl/widl ../wine-tools/
+        cp tools/wrc/wrc ../wine-tools/
+        cp tools/wmc/wmc ../wine-tools/
 
+    ############################################################
+    # 8) Build Wine (cross compile)
+    ############################################################
     - name: Configure & compile Wine
       run: |
         set -euxo pipefail
@@ -139,6 +134,7 @@ jobs:
         export RC=aarch64-w64-mingw32-windres
         export RANLIB=aarch64-w64-mingw32-ranlib
 
+        # Pass only the minimal wine-tools copy
         ../wine/configure \
           --build=$BUILD \
           --host=$HOST \
@@ -157,7 +153,7 @@ jobs:
         make -j"$(nproc)"
 
     ############################################################
-    # 8) Build DXVK
+    # 9) Build DXVK
     ############################################################
     - name: Build DXVK
       run: |
@@ -172,9 +168,9 @@ jobs:
         ninja -C build install
 
     ############################################################
-    # 9) Build VKD3D-Proton
+    # 10) Build VKD3D‑Proton
     ############################################################
-    - name: Build VKD3D-Proton
+    - name: Build VKD3D‑Proton
       run: |
         set -euxo pipefail
         git clone https://github.com/HansKristian-Work/vkd3d-proton.git
@@ -186,7 +182,7 @@ jobs:
         ninja -C build install
 
     ############################################################
-    # 10) Mesa TURNIP Vulkan
+    # 11) Mesa TURNIP Vulkan
     ############################################################
     - name: Clone Turnip CI patches
       run: |
@@ -219,7 +215,7 @@ jobs:
         ninja -C builddir install
 
     ############################################################
-    # 11) Packaging & Upload
+    # 12) Packaging & Upload
     ############################################################
     - name: Package WCP
       run: |
